fixed download button position on iOS Safari

--- a/src/less/download.less
+++ b/src/less/download.less
@@ -1,13 +1,13 @@
 .download {
 	position: fixed;
 	right: 0;
-	bottom: 0;
+	top: 0;
 	z-index: 400;
 
 	box-sizing: border-box;
 	width: ( 100vh / 8 );
 	height: ( 100vh / 8 );
-	margin: 0 0 ( 100vh / 8 ) 0;
+	margin: ( 100vh / 8 * 6 ) 0 0 0;
 	padding: 0.5em 0.5em;
 
 	font-size: 6.75vh;
